# aisecops-interceptor

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  security.yml
aisecops_interceptor/: __init__.py
aisecops_interceptor/api/: main.py
aisecops_interceptor/core/: approval.py  audit.py  capability_registry.py  context.py  decision.py  event_sink.py  events.py  exceptions.py  execution.py  executor.py  interceptor.py  models.py  policy.py
aisecops_interceptor/edge/: __init__.py  local_guard.py
aisecops_interceptor/guard/: detectors.py  input_inspector.py  models.py  output_inspector.py
aisecops_interceptor/integrations/: __init__.py  langgraph_adapter.py  openclaw_adapter.py  simple_adapter.py
aisecops_interceptor/llm/: base.py  config.py  factory.py  models.py  pipeline.py
aisecops_interceptor/llm/providers/: anthropic_client.py  ollama_client.py  openai_client.py
aisecops_interceptor/policy/: capabilities.py  loader.py  rule_engine.py  rules.py  schema.py
docs/: hack_demo.mov
examples/: agent_demo.py  capabilities_demo.py  demo.py  hack_the_agent_demo.py  langgraph_style_demo.py  openclaw_demo.py  policy_bundle_demo.py
policies/: capabilities.yaml  policies.yaml
scripts/: record_instructions.md  run_hack_demo.sh
tests/: test_api.py  test_capability_gate.py  test_capability_registry.py  test_event_sink.py  test_execution_gate.py  test_guard_input.py  test_guard_output.py  test_interceptor.py  test_langgraph_adapter.py  test_llm_factory.py  test_llm_pipeline.py  test_local_guard.py  test_openclaw_adapter.py  test_policy_engine.py  test_policy_loader.py  test_runtime_context.py
